<resources>
    <string name="app_name">Sync Project</string>
    <string name="db_name">employee_database</string>
    <string name="start_service">Sync</string>
    <string name="first_name_pl">First Name</string>
    <string name="last_name_pl">Last Name</string>
    <string name="email_pl">employee@aie.com</string>
    <string name="id_pl">ID 000</string>
    <string name="hired_date_pl">Hired Date: 2022/08/05</string>
    <string name="last_updated_pl">Last updated : 20 mn ago</string>

    <string name="last_updated">Last updated:  %1$s</string>

    <string name="notification_title">Foreground Service</string>
    <string name="notification_content">Notification Content</string>

    <string name="channel_id">CHANNEL_ID</string>
</resources>