<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/card_margin_y"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/teal_700"
        android:layout_marginHorizontal="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="@dimen/card_padding_xy"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name_pl"
                android:textColor="@color/white"
                android:layout_marginVertical="@dimen/card_fields_mg_y"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name_pl"
                android:layout_marginVertical="@dimen/card_fields_mg_y"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/first_name"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_pl"
                android:layout_marginVertical="@dimen/card_fields_mg_y"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/last_name"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/hired_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hired_date_pl"
                android:layout_marginVertical="@dimen/card_fields_mg_y"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/last_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginVertical="@dimen/card_fields_mg_y"
                android:text="@string/last_updated_pl"
                app:layout_constraintTop_toBottomOf="@id/hired_date"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/employee_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_pl"
                android:textColor="@color/white"
                android:layout_marginVertical="@dimen/card_fields_mg_y"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
